--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.4.1",
+    "font-awesome": "^4.7.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -47,9 +49,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^3.8.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
