--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap-sass": "^3.4.1",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.15.6",
+    "simplemde": "^1.11.2",
     "sweetalert2": "^7.15.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.2",
