--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap-sass": "^3.4.1",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.15.6",
+    "moment": "^2.24.0",
+    "node-emoji": "^1.10.0",
     "simplemde": "^1.11.2",
     "sweetalert2": "^7.15.1",
     "vue": "^2.5.2",
