--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qrcode.vue": "^1.6.1",
     "simplemde": "^1.11.2",
     "sweetalert2": "^7.15.1",
+    "vant": "^2.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
